adding rupee symbole

--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -115,7 +115,7 @@
                                             <li style="list-style-type: none;">
                                                 {{ key }} <small>({{ i }}%)</small>
                                                 <span class="price float-right">
-                                                            <span class="currency">$</span>
+                                                            <span class="currency">₹</span>
                                                 <span id="tax-{{ key }}">{{ j }}</span>
                                                 </span>
                                             </li>
