--- a/templates/customers/order_detail.html
+++ b/templates/customers/order_detail.html
@@ -11,7 +11,7 @@
                     {%include 'includes/c_sidebar.html'%}
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 mb-3">
-                    <div class="user-dashboard loader-holder">
+                    <div class="user-dashboard loader-holder .order_details_dashboard">
                         <div class="user-holder">
 
                             <div class="container">
