adding url to project profile

--- a/templates/virat_profile.html
+++ b/templates/virat_profile.html
@@ -72,7 +72,7 @@
             <div class="project_info">
                 <h4>Desi Bhojan</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, excepturi.</p>
-                <a class="btn btn-outline-danger text-uppercase font-weight-bold" href="#">View</a>
+                <a class="btn btn-outline-danger text-uppercase font-weight-bold" href="https://desibhojan.shop/">View</a>
 
             </div>
         </div>
