--- a/templates/virat_profile.html
+++ b/templates/virat_profile.html
@@ -5,8 +5,10 @@
         <div class="profile_info">
 
             <h2>A B O U T</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quae dignissimos vitae? Possimus obcaecati, in eius ad corporis natus consectetur nesciunt voluptatibus dolorem consequuntur nulla minus aliquid cum laudantium harum! Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam pariatur eius ex iure adipisci. Non doloribus optio cum odit!</p>
+            <p>Hi <b> I'm Virat Raj and I'm just 18 year old</b> and I have completed my high schooling from Scenic School Calicut seven month back. I have learned basics of python 11th and 12th and I love that doing and I wanted to continue my coding in
+                web development so I researched and I got jango is the best framework show a thought to go and join college but because of COVID and lack of money I couldn't after that I thought I should continue learning in my home And a great course
+                on Udemy and I continued learning web development it took five months to learn some of the good knowledge about Django and I developed a website call DesiBhujan.shop back of that I was doing two more projects, in which one is online pet
+                store and 2nd a school website. After this course I was able to complete one full flagged multi vendor desi Bhujan website and two more websites which I have told earlier and I learned knowledge by that course And I want to thank you <b>Rathan Kumar Sir.</b>                now I want to continue building more Website in future and I love to do that thank you.</p>
 
 
         </div>
@@ -71,7 +73,11 @@
             </div>
             <div class="project_info">
                 <h4>Desi Bhojan</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, excepturi.</p>
+                <p>Its a multi vendor food online store
+                    <b>duration</b> <br> from : 06 September 2022 <br> To : 20 January 2023
+
+                </p>
+
                 <a class="btn btn-outline-danger text-uppercase font-weight-bold" href="https://desibhojan.shop/">View</a>
 
             </div>
@@ -83,7 +89,7 @@
             </div>
             <div class="project_info">
                 <h4>Pet Online</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, excepturi.</p>
+                <p>it's the online store for selling Pets <b>duration</b> <br> from : 03 October 2022 <br> To : almost completed</p>
                 <a class="btn btn-outline-danger text-uppercase font-weight-bold" href="#">View</a>
             </div>
         </div>
@@ -94,7 +100,7 @@
             </div>
             <div class="project_info">
                 <h4>children's Academy </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, excepturi.</p>
+                <p>it's a school Website <br> <b>duration</b> <br> from : 06 October 2022 <br> To : yet to complete </p>
                 <a class="btn btn-outline-danger text-uppercase font-weight-bold" href="#">View</a>
 
             </div>
