--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
                         <h1 style="font-size: 40px; color: #505050; text-transform: uppercase; line-height: 50px; margin-bottom: 25px; text-align:center;">
                             We are in the business of food<br>our restaurants do</h1>
                         <p style="font-size: 18px; letter-spacing: 1px; color: #505050; text-align:center;">
-                            This place is <b>Free</b> for all the vendors who want to sell their food online.</p>
+                            This place is <b>Free</b> vendors want to sell their foods online</p>
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
