--- a/foodonline/static/css/custom.css
+++ b/foodonline/static/css/custom.css
@@ -219,7 +219,7 @@ table>tbody>tr>td {
     }
     .company-logo ul {
         margin: 0px 32px !important;
-        padding: 0;
+        padding: 0 !important;
         text-align: left !important;
     }
     .user-dashboard {
@@ -267,7 +267,7 @@ table>tbody>tr>td {
         width: 100% !important;
     }
     .project {
-        width: 300px;
+        width: 300px !important;
         margin: auto !important;
         margin-top: 20px !important;
     }
