--- a/templates/virat_profile.html
+++ b/templates/virat_profile.html
@@ -5,10 +5,8 @@
         <div class="profile_info">
 
             <h2>A B O U T</h2>
-            <p>Hi <b> I'm Virat Raj and I'm just 18 year old</b> and I have completed my high schooling from Scenic School Calicut seven month back. I have learned basics of python 11th and 12th and I love that doing and I wanted to continue my coding in
-                web development so I researched and I got jango is the best framework show a thought to go and join college but because of COVID and lack of money I couldn't after that I thought I should continue learning in my home And a great course
-                on Udemy and I continued learning web development it took five months to learn some of the good knowledge about Django and I developed a website call DesiBhujan.shop back of that I was doing two more projects, in which one is online pet
-                store and 2nd a school website. After this course I was able to complete one full flagged multi vendor desi Bhujan website and two more websites which I have told earlier and I learned knowledge by that course And I want to thank you <b>Rathan Kumar Sir.</b>                now I want to continue building more Website in future and I love to do that thank you.</p>
+            <p>Hi <b> I'm Virat Raj and I'm just 18 year old</b> I completed my high schooling from Sainik School Kalikiri. I learned basics of python in 11th and 12th and I wanted to continue my coding in web development sod I got Django is the best framework
+                and I thought I should continue learning in my home And i found great course on Udemy and I continued learning Django and frontend. After this course I was able to complete some projects as given below And I want to thank <b>Rathan Kumar Sir.</b>                now I want to continue building more Website in future and I love to do that thank you.</p>
 
 
         </div>
