--- a/foodonline/static/css/custom.css
+++ b/foodonline/static/css/custom.css
@@ -82,6 +82,7 @@ table>tbody>tr>td {
 
 .profile {
     width: 1100px;
+    height: 631px;
     display: flex;
     flex-wrap: wrap;
     margin: 20px auto;
