--- a/templates/virat_profile.html
+++ b/templates/virat_profile.html
@@ -2,16 +2,19 @@
 <!-- Main Section Start -->
 <div class="main-section">
     <div class="profile">
-        <div class="profile_info">
+        <div style="height: 630px;">
+            <div class="profile_info">
 
-            <h2>A B O U T</h2>
-            <p>Hi <b> I'm Virat Raj and I'm just 18 year old</b> I completed my high schooling from Sainik School Kalikiri. I learned basics of python in 11th and 12th and I wanted to continue my coding in web development sod I got Django is the best framework
-                and I thought I should continue learning in my home And i found great course on Udemy and I continued learning Django and frontend. After this course I was able to complete some projects as given below And I want to thank <b>Rathan Kumar Sir.</b>                now I want to continue building more Website in future and I love to do that thank you.</p>
+                <h2>A B O U T</h2>
+                <p>Hi <b> I'm Virat Raj and I'm just 18 year old</b> I completed my high schooling from Sainik School Kalikiri. I learned basics of python in 11th and 12th and I wanted to continue my coding in web development sod I got Django is the best
+                    framework and I thought I should continue learning in my home And i found great course on Udemy and I continued learning Django and frontend. After this course I was able to complete some projects as given below And I want to thank
+                    <b>Rathan Kumar Sir.</b> now I want to continue building more Website in future and I love to do that thank you.</p>
 
 
-        </div>
-        <div class="profile_image">
-            <img src="{% static 'images/virat.jpg' %}" alt="photo">
+            </div>
+            <div class="profile_image">
+                <img src="{% static 'images/virat.jpg' %}" alt="photo">
+            </div>
         </div>
     </div>
     <!-- study area   -->
