--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -182,7 +182,7 @@
         "currency": "INR",
         "name": "foodOnline",
         "description": "Online food store ",
-        "image": "{% static 'logo/foodOnlineLogo.png'%}",
+        "image": "{% static 'logo/logo.jpg'%}",
         "order_id": "{{rzp_order_id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
         "handler": function(response) {
             // alert(response.razorpay_payment_id);
