changing email templates

--- a/templates/orders/new_order_received.html
+++ b/templates/orders/new_order_received.html
@@ -101,8 +101,8 @@
         <table role="presentation" bgcolor="#C33332" width="100%">
             <tr>
                 <td align="center" style="padding: 15px 15px; color: #fff;">
-                    <p>© {% now "Y" %} FoodOnline Marketplace, All Rights Reserved.</p>
-                    <a href="#" style="color:#fff;">Visit Website</a>
+                    <p>© {% now "Y" %} DESI BHOJAN Marketplace, All Rights Reserved.</p>
+                    <a href="https://desibhojan.shop/" style="color:#fff;">Visit Website</a>
                 </td>
             </tr>
         </table>
