--- a/templates/customers/cover.html
+++ b/templates/customers/cover.html
@@ -10,7 +10,7 @@
                     <div class="company-info">
                         <div class="img-holder">
                             <figure>
-                                {% if user_profile.profile_picture %}
+                                {% if profile.profile_picture %}
                                 <img src="{{ user_profile.profile_picture.url}}" alt="">
                                 {% else %}
                                 <img src="{% static 'extra-images/listing-logo18.png'%}" alt="">
